<resources>
<!--    <string name="app_name">Films</string>-->
    <string name="comment_header">Комментарий:</string>
    <string name="like_text">Нравится</string>
    <string name="button_detail_description">детали</string>
    <string name="hint_comment_edit">Оставьте свой комментарий</string>
    <string name="button_send_comment_description">опубликовать</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="invite_message">Пойдешь со мной на фильм \"%s\?"</string>>
    <string name="not_find_app">Не найдено приложение</string>
    <string name="btn_favorite">Избранное</string>
    <string name="default_value">Значения По умолчанию</string>
    <string name="title_favorite_film">Избранное</string>
    <string name="empty_favorite">Список избранного пуст</string>
    <string name="empty_see_later">Список пуст</string>
    <string name="close_app_body">Закрыть приложение?</string>
    <string name="film_bottom_menu">Фильмы</string>
    <string name="favorite_film_bottom_menu">Избранное</string>
    <string name="snackbar_action_title">Отмена</string>
    <string name="snackbat_title_add">Добавлено в избранное</string>
    <string name="snackbat_title_delete">Удалено из избранного</string>
    <string name="repeat">Повторить</string>
    <string name="error_network">Нет соединения с интернетом</string>
    <string name="error_token">Пустой или неправильный токен</string>
    <string name="error_limit">Слишком много запросов. Лимит 5 запроса в секунду</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="it_is_time_move_film">Пора смотреть фильм \"%s\"!</string>
    <string name="open_film">Открыть фильм</string>
    <string name="see_later">Посмотреть позже</string>
    <string name="default_notification_channel_id" translatable="false">firebase channel</string>
</resources>