<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:contentPadding="5dp"
        app:cardBackgroundColor="@color/background_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_card_view">


            <ImageView
                android:id="@+id/imageFilm"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                tools:text="@tools:sample/cities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageFilm"
                app:layout_constraintTop_toBottomOf="@+id/imageFilm" />

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/like_text"
                android:src="@drawable/ic_not_like"
                android:background="@color/background_like"
                android:textColor="@color/like_text_color"
                android:contentDescription="@string/like_text"
                app:layout_constraintStart_toStartOf="@+id/imageFilm"
                app:layout_constraintBottom_toBottomOf="@+id/imageFilm"
                />
            <TextView
                android:id="@+id/tvCommentHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/comment_header"
                app:layout_constraintStart_toStartOf="@+id/imageFilm"
                app:layout_constraintTop_toBottomOf="@id/tvFilm"/>

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCommentHeader"
                tools:text="@tools:sample/lorem" />

            <ImageButton
                android:id="@+id/btnDetail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/button_detail_description"
                app:layout_constraintBottom_toBottomOf="@+id/imageFilm"
                app:layout_constraintEnd_toEndOf="@id/imageFilm"
                app:srcCompat="@android:drawable/ic_menu_info_details" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>